--- a/docs/latex/index.tex
+++ b/docs/latex/index.tex
@@ -1,8 +1,8 @@
 \hypertarget{index_intro_sec}{}\section{Introduction}\label{index_intro_sec}
 Lazy Matrix is a Single header only Matrix Library for basic operations it implements the expression template style to lazy-\/ly evaluate when it is required. This Project was the part of boost.\+u\+B\+L\+AS Competancy Test in Google Summer of Codes 2019 However you are free to use this any ways you want.\hypertarget{index_install_sec}{}\section{Documentation}\label{index_install_sec}
-Head over to this {\ttfamily U\+RL} for the complete documentation of {\ttfamily \mbox{\hyperlink{lazy__matrix_8hpp_source}{lazy\+\_\+matrix.\+hpp}}}
+Head over to this \href{https://coder3101.github.io/gsoc19-boost-test/html/classboost_1_1test_1_1lazy__matrix.html}{\texttt{ {\bfseries{U\+RL}}}} for the complete documentation of {\ttfamily \mbox{\hyperlink{lazy__matrix_8hpp_source}{lazy\+\_\+matrix.\+hpp}}}
 
-You can also read Sample Examples at {\ttfamily url}\hypertarget{index_license}{}\section{License}\label{index_license}
+You can also read Sample Examples at $<$a href=\char`\"{}https\+://github.\+com/coder3101/gsoc19-\/boost-\/test$>$this url$<$/a$>$\char`\"{}\hypertarget{index_license}{}\section{License}\label{index_license}
 Copyright 2019 Ashar \href{mailto:ashar786khan@gmail.com}{\texttt{ ashar786khan@gmail.\+com}}
 
 Licensed under the Apache License, Version 2.\+0 (the \char`\"{}\+License\char`\"{}); you may not use this file except in compliance with the License. You may obtain a copy of the License at \begin{DoxyVerb}http://www.apache.org/licenses/LICENSE-2.0
